--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">
-                                <i class="uil uil-file-info-alt"></i>
+                                <i class="uil uil-file-info-alt">Skills</i>
                             </a>
                         </li>
                         <li class="nav__item">
@@ -50,10 +50,17 @@
                         </li>
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">
-                                <i class="uil uil-message">Contactme</i>
+                                <i class="uil uil-message">Contact Me</i>
                             </a>
                         </li>
                     </ul>
+                    <i class="uil uil-times nav__close" id="nav-close"></i>
+                </div>
+
+                <div class="nav__btns">
+                    <div class="nav__toggle" id="nav-toggle">
+                        <i class="uil uil-apps"></i>
+                    </div>
                 </div>
             </nav>
         </header>
