updated links to icons and added hover to X icon

--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
                     <ul class="nav__list grid">
                         <li class="nav__item">
                             <a href="#home" class="nav__link">
-                                <i class="uil uil-airplay">Home</i>
+                                <i class="uil uil-airplay nav__icon">Home</i>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">
-                                <i class="uil uil-user">About</i>
+                                <i class="uil uil-user nav__icon">About</i>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#skills" class="nav__link">
-                                <i class="uil uil-file-info-alt">Skills</i>
+                                <i class="uil uil-file-info-alt nav__icon">Skills</i>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#services" class="nav__link">
-                                <i class="uil uil-briefcase">Services</i>
+                                <i class="uil uil-briefcase nav__icon">Services</i>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#portfolio" class="nav__link">
-                                <i class="uil uil-scenery">Portfolio</i>
+                                <i class="uil uil-scenery nav__icon">Portfolio</i>
                             </a>
                         </li>
                         <li class="nav__item">
                             <a href="#contact" class="nav__link">
-                                <i class="uil uil-message">Contact Me</i>
+                                <i class="uil uil-message nav__icon">Contact Me</i>
                             </a>
                         </li>
                     </ul>
