Added Hobbies description, with Contact Button

--- a/index.html
+++ b/index.html
@@ -102,6 +102,12 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'm Caige</h1>
                             <h3 class="home__subtitle">Student at BSU</h3>
+                            <p class="home__description">Hobbies: Video Games along with occasional Card Games, coding
+                                and making art for Projects I make, I love watching all types of anime from Action to
+                                Horror, and etc.</p>
+                            <a href="#contact" class="button button--flex">
+                                Contact Me <i class="uil uil-message button__icon"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
