--- a/index.html
+++ b/index.html
@@ -115,7 +115,31 @@
 
             <!--==================== ABOUT ====================-->
             <section class="about section" id="about">
-                
+                <h2 class="section__title">About Me</h2>
+                <span class="section__subtitle">My introduction</span>
+                <div class="about__container container grid">
+                    <img src="assets/img/about.jpg" alt="" class="about__img">
+
+                    <div class="about__data">
+                        <p class="about__description">I am a CS Major, Senior at BSU, Working across Java with some
+                            JavaFx experience, Python, and Godot(Gaming Engine).</p>
+
+                        <div class="about__info">
+                            <div>
+                                <span class="about__info-title">>1<span>
+                                <span class="about__info-name">Years <br> experience</span>
+                            </div>
+                            <div>
+                                <span class="about__info-title">2-5<span>
+                                <span class="about__info-name">Projects <br> Completed</span>
+                            </div>
+                            <div>
+                                <span class="about__info-title">0<span>
+                                <span class="about__info-name">Companies <br> worked</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </section>
 
             <!--==================== SKILLS ====================-->
