updated about me spacing

--- a/index.html
+++ b/index.html
@@ -127,15 +127,16 @@
                         <div class="about__info">
                             <div>
                                 <span class="about__info-title">>1<span>
-                                <span class="about__info-name">Years <br> experience</span>
+                                <span class="about__info-name">Years experience</span>
                             </div>
+
                             <div>
                                 <span class="about__info-title">2-5<span>
-                                <span class="about__info-name">Projects <br> Completed</span>
+                                <span class="about__info-name">Projects Completed</span>
                             </div>
                             <div>
                                 <span class="about__info-title">0<span>
-                                <span class="about__info-name">Companies <br> worked</span>
+                                <span class="about__info-name">Companies worked</span>
                             </div>
                         </div>
                     </div>
