added Download pdf button and pdf to Page

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                                 <span class="about__info-name">Companies worked</span>
                             </div>
                         </div>
+
+                        <div class="about__buttons">
+                            <a download="" href="assets/pdf/Caige-Cv.pdf" class="button button--flex">
+                                <i class="uil uil-download-alt"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
