added text with Download button

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
                         <div class="about__buttons">
                             <a download="" href="assets/pdf/Caige-Cv.pdf" class="button button--flex">
-                                <i class="uil uil-download-alt"></i>
+                                Download CV<i class="uil uil-download-alt"></i>
                             </a>
                         </div>
                     </div>
